# soft-commodities-forecast-benchmark

./: .env.example  .gitignore  LICENSE  LICENSES.md  Makefile  README.md  data_snapshot.json  pyproject.toml
configs/: base.yaml  cocoa.yaml  coffee.yaml  cotton.yaml  global.yaml  hmm.yaml  sugar.yaml
configs/results/: evaluation_cocoa.json  evaluation_coffee.json  evaluation_sugar.json
docs/: limitations.md  methodology.md
notebooks/: 01_garch_baseline_exploration.ipynb  _build_notebook.py
results/: cocoa_diagnostics.json  coffee_diagnostics.json  cotton_diagnostics.json  evaluation_cocoa.json  evaluation_coffee.json  evaluation_cotton.json  hmm_detection_evaluation.json  hmm_meta_cocoa.json  hmm_meta_coffee.json  hmm_meta_cotton.json  hmm_meta_sugar.json  hmm_posterior_cocoa.parquet  hmm_posterior_coffee.parquet  hmm_posterior_cotton.parquet  hmm_posterior_sugar.parquet  sugar_diagnostics.json
src/benchmark/: base_loader.py  evaluate.py  hmm_evaluate.py  hmm_regime.py  metrics.py  notebook_utils.py  predict.py  preprocessing.py  reproduce.py  train.py  yfinance_loader.py
tests/: __init__.py  test_config_integrity.py  test_snapshot.py
